--- a/front/src/app/home-page/home-page.component.html
+++ b/front/src/app/home-page/home-page.component.html
@@ -4,14 +4,18 @@
 <div gdcolumns="repeat(auto-fill, minmax(300px, 1fr))" gdgap="10px"
      style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 10px;"
 >
-            <div><p>I am transitioning from a career in IP (patents) to web development.  I started this journey making a quiz app to help me study for a patent exam, but ended up having a lot of fun making the app, at least more fun than studying for a patent exam.</p>
+            <div><p>
+            I am transitioning from a career in IP (patents) to web development.  I started this journey making a quiz app as a study aid for a professional exam.  Now I am excited to be improving my skills daily.
+            </p>
             </div>
             <div>
             <mat-list role="list">
                 <mat-divider></mat-divider>
                 <div mat-subheader>Skills</div>
                 <mat-list-item role="listitem">
-                    <div matLine>
+                <div matLine> 
+                </div>
+                <div matLine>
                         Django
                 </div>
                 <div matLine>
@@ -21,62 +25,51 @@
                     Angular
                 </div>
                 <div matLine>
+                    rxjs, ngrx
+                </div>
+                <div matLine>
                     Postgresql
                 </div>
 
-            </mat-list-item>
-            <mat-list-item role="listitem">
-                <div matLine>
-                    Experience with Patents
-                </div>
-                <div matLine>
-                    More details available upon request
-                </div>
             </mat-list-item>
             </mat-list>
             </div>
             <div>
             <mat-list>
             <mat-divider></mat-divider>
-            <div mat-subheader>Demo Websites</div>
+            <div mat-subheader>Websites</div>
             <mat-list-item role="listitem">
-                <div matLine>
-                    Patent Portfolio (MVVM, Angular + Django)
-                </div>
-                <div matLine>
-                    <a href="https://patport.cc" >
-                        https://patport.cc
+                                <div matLine>
+                    <a mat-raised-button color="accent" href="https://patport.cc" >
+                        Patport Cost Estimator
                     </a>
                 </div>
             </mat-list-item>
             
             <mat-list-item role="listitem">
                 <div matLine>
-                    Quiz Course (MVC, Django)
-                </div>
-                <div matLine>
-                    <a href="https://gentle-brushlands-05163.herokuapp.com">
-                        https://gentle-brushlands-05163.herokuapp.com
+                    <a mat-raised-button color="accent" href="https://gentle-brushlands-05163.herokuapp.com">
+                    Quiz App
                     </a>
                 </div>
             </mat-list-item>
             <mat-list-item role="listitem">
                 <div matLine>
-                    GitHub Account
-                </div>
-                <div matLine>
-                    <a href="https://github.com/cval245">
-                        https://github.com/cval245</a>
+                    <a mat-raised-button color="accent" href="https://github.com/cval245">
+                        <mat-icon svgIcon="github" aria-hidden="false"></mat-icon>
+                        GitHub Account
+                    </a>
                 </div>
             </mat-list-item>
             </mat-list>
             </div>
+
             <div>
             <mat-list>
             <mat-divider></mat-divider>
             <div mat-subheader>Education</div>
             <mat-list-item role="listitem">
-                <div matLine> B.S. Physics - 2015</div>
+                <div matLine> B.S. Physics</div>
                 <div matLine> Roanoke College</div>
                 <div matLine> Salem, VA</div>
             </mat-list-item>
