--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 //@import './app.theme';
 
-@use '~@angular/material' as mat;
+//@use '~@angular/material' as mat;
 @import './theme.scss';
 
 
@@ -38,6 +38,7 @@ body {
     padding:20px;
     margin: 5px;
 }
+
 
 .over-main{
     flex: 1;
