--- a/front/src/app/home-page/home-page.component.scss
+++ b/front/src/app/home-page/home-page.component.scss
@@ -2,9 +2,35 @@
 .filler{
     flex: 1 1 auto;
 }
-img{
-    width: auto;
-    height: 100%;
+
+.text-button{
+    min-width: 100px;
 }
+.img-container{
+    margin: 10px;
+    flex-flow: row wrap;
+    box-sizing: border-box; 
+    display: flex;
+}
+img{
+    min-width: 200px;
+    min-height: 200px;
+    width: 50%;
+    height: 50%;
+    background-size: cover;
+    background-position: center center;
+}
+.override-img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
 
-
+}
+.personal-statement{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.mat-card-actions-class{
+    margin-left: 10px;
+}
