--- a/front/src/app/home-page/home-page.component.scss
+++ b/front/src/app/home-page/home-page.component.scss
@@ -12,6 +12,9 @@
     box-sizing: border-box; 
     display: flex;
 }
+.git-btn{
+    margin-left: 3px;
+}
 img{
     min-width: 200px;
     min-height: 200px;
